# ancestral-vision-tree

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  package.json
src/: lib.rs
src/animation/: easing.rs  growth_animation.rs  mod.rs
src/data/: family_tree.rs  mod.rs  person.rs
src/growth/: algorithm.rs  mod.rs
src/interaction/: mod.rs  picking.rs
src/math/: matrix.rs  mod.rs  spline.rs  vec3.rs
src/mesh/: branch.rs  generator.rs  mod.rs
src/particles/: fireflies.rs  mod.rs  orbs.rs
src/render/: mod.rs  pipeline.rs  shaders.rs  webgl.rs
src/visual/: metrics.rs  mod.rs  tests.rs
test-data/: sample-family.yaml  visual-test-biography-range.yaml
www/: bootstrap.js  index.html  style.css  visual-evaluation.html  visual-test.html
